# Seg-MoE-v2

./: .gitignore  PROJECT_CONTEXT_FOR_WEBGPT.md  README.md  environment.segmoe-v2.yml  pyproject.toml  requirements.txt
data/geometry_fixed/: geometry_fix_report.csv  geometry_fix_report.json
infer/: run_anatomy_external_suzhou.py
requirements/: v2-dev.txt  v2-runtime.txt
scripts/: anatomy_qc_showcase.py
src/segmoe_v2/: __init__.py  anatomy_visual_qc.py  backend_data.py  calibration.py  contracts.py  datasets.py  features.py  fp_bank.py  fusion.py  gate.py  geometry_audit.py  geometry_fix.py  gland_crop.py  io_utils.py  labels.py  layer1.py  manifest.py  nnunet_anatomy.py  nnunet_anatomy_predict.py  oof.py  prediction_manifests.py  roi.py  sampling.py  segmamba_adapter.py
src/segmoe_v2/SwinUNETR/: main.py
src/segmoe_v2/cli/: __init__.py  main.py
src/segmoe_v2/nnFormer/nnformer/dataset_conversion/: Task017_BeyondCranialVaultAbdominalOrganSegmentation.py  Task029_LiverTumorSegmentationChallenge.py  (+20 more)
src/segmoe_v2/runners/: __init__.py  base.py  mednext.py  nnformer.py  nnunet.py  segmamba.py  swinunetr.py  utils.py
tests/: test_anatomy_visual_qc.py  test_backend_layer1_exports.py  test_calibration.py  test_cli.py  test_datasets.py  test_fp_bank.py  test_fusion.py  test_geometry_audit.py  test_geometry_fix.py  test_gland_crop.py  test_io_utils.py  test_labels.py  test_layer1.py  test_manifest.py  test_nnunet_anatomy.py  test_nnunet_predictor.py  test_prediction_manifests.py  test_roi.py  test_runners.py  test_sampling.py  test_segmamba_adapter.py
(+88 files in other folders)
