[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segmoe-v2"
version = "0.1.0"
description = "SegMoE v2 3D prostate pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "pyyaml>=6.0",
  "scipy>=1.11",
  "torch>=2.0",
  "nibabel>=5.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
monai = ["monai>=1.3.0", "SimpleITK>=2.3.0"]

[project.scripts]
segmoe-v2 = "segmoe_v2.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
